# pico-rtc

./: .gitmodules  CMakeLists.txt  sync_time.py
example/: CMakeLists.txt  synctime.py
example/src/: main.cpp
include/rtc/: RealTimeClock.h
src/rtc/: RealTimeClock.cpp
